exercise 1 and 3